--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,6 @@ security:
       clientSecret: acmesecret
     resource:
       userInfoUri: http://localhost:9999/uaa/user
+      
+server:
+  use-forward-headers: true
